--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
 server.port=${PORT:8081}
+#MySQL Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/vehiclemanager
+spring.datasource.username=root
+spring.datasource.password=Grzesio1
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
